--- a/Papers/cn_paper.html
+++ b/Papers/cn_paper.html
@@ -35,67 +35,73 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/park.jpg">
-                        <img src="../images/park.jpg" alt="Park">
+                    <a class="lightbox" href="../images/p1.jpg">
+                        <img src="../images/p1.jpg" alt="Park">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Computer Network</h3>
+                        <p>The above Computer Networking paper is of IV Semester, C.T 2.
+                        Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/bridge.jpg">
-                        <img src="../images/bridge.jpg" alt="Bridge">
+                    <a class="lightbox" href="../images/p2.jpg">
+                        <img src="../images/p2.jpg" alt="Bridge">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Computer Organization</h3>
+                        <p>The above Computer Organization paper is of IV Semester, C.T 2.
+                        Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/tunnel.jpg">
-                        <img src="../images/tunnel.jpg" alt="Tuneel">
+                    <a class="lightbox" href="../images/p3.jpg">
+                        <img src="../images/p3.jpg" alt="Tuneel">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>E-Commerce</h3>
+                        <p>The above E-Commerce paper is of IV Semester, C.T 2.
+                        Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/coast.jpg">
-                        <img src="../images/coast.jpg" alt="Coast">
+                    <a class="lightbox" href="../images/p4.jpg">
+                        <img src="../images/p4.jpg" alt="Coast">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Operating System</h3>
+                        <p>The above Operating System paper is of IV Semester, C.T 1.
+                        Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/rails.jpg">
-                        <img src="../images/rails.jpg" alt="Rails">
+                    <a class="lightbox" href="../images/p5.jpg">
+                        <img src="../images/p5.jpg" alt="Rails">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>Computer Networking</h3>
+                        <p>The above Computer Networking paper is of IV Semester, C.T 1.
+                        Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="../images/traffic.jpg">
-                        <img src="../images/traffic.jpg" alt="Traffic">
+                    <a class="lightbox" href="../images/p6.jpg">
+                        <img src="../images/p6.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h3>E-Commerce</h3>
+                        <p>The above E-Commerce paper is of IV Semester, C.T 1.
+                        Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
             </div>
