--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>GCOEA - Note</title>
+		<title>GCOEA - Cache</title>
 		<meta name="description" content="Circular Navigation Styles - Building a Circular Navigation with CSS Transforms | Codrops " />
 		<meta name="keywords" content="css transforms, circular navigation, round navigation, circular menu, tutorial" />
 		<meta name="author" content="Sara Soueidan for Codrops" />
@@ -33,7 +33,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<span class="right"><a class="codrops-icon codrops-icon-drop" href="https://gcoea.ac.in"><span>About Us</span></a></span>
 			</div>
 			<header>
-				<h1>GCOEA - Note<span>Access syllabus, now with a greater speed</span></h1>	
+				<h1>GCOEA - Cache<span>Access syllabus, now with a greater speed</span></h1>	
 				<!--<nav class="codrops-demos">
 					<a href="index.html">Demo 1</a>
 					<a class="current-demo" href="index2.html">Demo 2</a>
