--- a/cn.html
+++ b/cn.html
@@ -124,7 +124,7 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="cn_syllabus.html" download>Syllabus</a>
+                    <a href="cn_syllabus.html">Syllabus</a>
                 </li>
                 
             </ul>
@@ -176,7 +176,7 @@ Evaluation Scheme:15 CT1 + 15 CT2 +10 TA +60 ESE                  Total Marks:10
 Duration of ESE :2 hrs 30 min</font></h4></pre></p>             
 
 <div class="line"></div>-->
-                <h2 align="center">What is a Computer Network?</h2>
+                <h3 align="center">What is a Computer Network?</h3>
                 <ul class="points">
 <li><strong>Computer Network</strong> is a group of computers connected with each other through wires, optical fibres or optical links so that various devices can interact with each other through a network.</li>
 <li>The aim of the computer network is the sharing of resources among various devices.</li>
