--- a/cn_tp/FDDI.html
+++ b/cn_tp/FDDI.html
@@ -125,7 +125,7 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="cn_syllabus.pdf">Syllabus</a>
+                    <a href="../cn_syllabus.html">Syllabus</a>
                 </li>
                 
             </ul>
