--- a/cn_tp/Internet and related software‟s NETSCAPE and MOSAIC.html
+++ b/cn_tp/Internet and related software‟s NETSCAPE and MOSAIC.html
@@ -124,7 +124,7 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="cn_syllabus.pdf">Syllabus</a>
+                    <a href="../cn_syllabus.html">Syllabus</a>
                 </li>
                 
             </ul>
