--- a/about_us.html
+++ b/about_us.html
@@ -77,9 +77,9 @@ html {
 
 
 <div class="about-section">
-  <h1>About Us Page</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
+  <h1>ABOUT US</h1>
+  <p>We are the original creators of Cache-GCOEA.</p>
+  <p>Cache-GCOEA is a online learning platform where you can brower through our clg related syllabus rapidly. Also no worries if net-connection is down because it also suppor's caching which allows your device(in android-app) to view content offline!</p>
 </div>
 
 <h2 style="text-align:center">Our Team and Contact info</h2>
@@ -91,8 +91,8 @@ html {
         <h2>Shubham Waratkar</h2>
         <p class="title">Developer</p>
         <p>I am Shubham of class I.T 3rd Year. I contributed in developing GCOEA-Cache both for website as well as for android-app.</p>
-        <p>Shubham99@gail.com</p>
-        <a href="tel:123-456-7890"><p><button class="button" href="tel:+91 9867410605">Contact</button></p></a>
+        <p>Shubham99@gmail.com</p>
+        <a href="tel:+91 8308192533"><p><button class="button">Contact</button></p></a>
         
       </div>
     </div>
@@ -100,26 +100,26 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="images/san.JPG" alt="Mike" style="width:100%">
+      <img src="images/san.JPG" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Sanjiv Jadhav</h2>
         <p class="title">Developer</p>
-        <p>I am Sajiv of class I.T 3rd Year. I contributed in developing GCOEA-Cache both for website as well as for Android-App.</p>
-        <p>Sanjeev.jadhav99@gmail</p>
-        <p><button class="button" data-toggle="modal" data-target="#myModal">Contact</button></p>
+        <p>I am Sanjeev of class I.T 3rd Year. I contributed in developing GCOEA-Cache both for website as well as for android-app.</p>
+        <p>Sanjiv.jadhav99@gmail.com</p>
+        <a href="tel:+91 9867410605"><p><button class="button">Contact</button></p></a>
+        
       </div>
     </div>
   </div>
-  
   <div class="column">
     <div class="card">
       <img src="images/whatsapp.JPG" alt="John" style="width:100%">
       <div class="container">
         <h2>Whatsapp-Group</h2>
         <p class="title">Support</p>
-        <p>Please join this group for our support. We are open to all suggestions.</p>
+        <p>The JOIN button below would redirect you to our Whatsapp grp. Please join this group for our support to help us put new content if any. We are open to all suggestions.</p>
         <p>Click The Link Below To Join The Group!</p>
-        <p><button class="button">JOIN</button></p>
+        <a href="  https://chat.whatsapp.com/BxboKOvuXAK0Ay9wVyEuyI"><p><button class="button">JOIN</button></p></a>
       </div>
     </div>
   </div>
