--- a/about_us.html
+++ b/about_us.html
@@ -86,7 +86,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="images/shu.JPG" alt="Jane" style="width:100%">
+      <img src="images/shu.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Shubham Waratkar</h2>
         <p class="title">Developer</p>
@@ -100,7 +100,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="images/san.JPG" alt="Jane" style="width:100%">
+      <img src="images/san.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Sanjiv Jadhav</h2>
         <p class="title">Developer</p>
@@ -113,7 +113,7 @@ html {
   </div>
   <div class="column">
     <div class="card">
-      <img src="images/whatsapp.JPG" alt="John" style="width:100%">
+      <img src="images/whatsapp.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Whatsapp-Group</h2>
         <p class="title">Support</p>
