--- a/about_us.html
+++ b/about_us.html
@@ -111,9 +111,10 @@ html {
       </div>
     </div>
   </div>
+
   <div class="column">
     <div class="card">
-      <img src="images/whatsapp.jpg" alt="John" style="width:100%">
+      <img src="images/whatsapp.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Whatsapp-Group</h2>
         <p class="title">Let's Support!</p>
@@ -124,8 +125,6 @@ html {
     </div>
   </div>
 </div>
-
-
 
 </body>
 </html>
