--- a/about_us.html
+++ b/about_us.html
@@ -120,7 +120,10 @@ html {
         <p class="title">Let's Support!</p>
         <p>The JOIN button below would redirect you to our Whatsapp grp. Please join this group for our support to help us put new content if any. We are open to all suggestions.</p>
         <p>Click The Link Below To Join The Group!</p>
-        <a href="https://chat.whatsapp.com/BxboKOvuXAK0Ay9wVyEuyI"><p><button class="button">JOIN</button></p></a>
+        <a href="https://wa.me/15551234567?text=I%20am%20interested%20in%20your%20services.%20How%20to%20get%20started%3F"><p><button class="button">JOIN</button></p></a>
+<!--
+        <a href="https://wa.me/15551234567?text=I%20am%20interested%20in%20your%20services.%20How%20to%20get%20started%3F">I am interested</a> -->
+      
       </div>
     </div>
   </div>
