--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 		<div class="container">
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
-				<a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/CreativeLinkEffects/"><span>Contact Us</span></a>
-				<span class="right"><a class="codrops-icon codrops-icon-drop" href="https://gcoea.ac.in"><span>About Us</span></a></span>
+				<a class="codrops-icon codrops-icon-prev" href="about_us.html"><span>Contact Us</span></a>
+				<span class="right"><a class="codrops-icon codrops-icon-drop" href="about_us.html"><span>About Us</span></a></span>
 			</div>
 			<header>
 				<h1>GCOEA - Cache<span>Access syllabus, now with a greater speed</span></h1>	
