--- a/It/index.html
+++ b/It/index.html
@@ -139,7 +139,7 @@
             </ul>
           </li>
 
-          <li class="drop-down"><a href="">V-SEMESTER</a>
+          <li class="drop-down"><a href="">VI-SEMESTER</a>
             <ul>
               <li><a href="../coming_soon.html">Design and Analysis of Algorithms</a></li> 
               <li><a href="../coming_soon.html">Computer  Organization</a></li>
