--- a/about_us.html
+++ b/about_us.html
@@ -91,7 +91,7 @@ html {
         <h2>Shubham Waratkar</h2>
         <p class="title">Developer</p>
         <p>I am Shubham of class I.T 3rd Year. I contributed in developing GCOEA-Cache both for website as well as for android-app.</p>
-        <p>Shubham99@gmail.com</p>
+        <p>shubhamwaratkar99@gmail.com</p>
         <a href="tel:+91 8308192533"><p><button class="button">Contact</button></p></a>
         
       </div>
@@ -120,9 +120,11 @@ html {
         <p class="title">Let's Support!</p>
         <p>The JOIN button below would redirect you to our Whatsapp grp. Please join this group for our support to help us put new content if any. We are open to all suggestions.</p>
         <p>Click The Link Below To Join The Group!</p>
-        <a href="https://api.whatsapp.com/send?phone=+91 8308192533 &text=urlencodedtext"><p><button class="button">JOIN</button></p></a>
+        <a href="mailto:Sanjeev.jadhav99@gmail.com,shubhamwaratkar99@gmail.com"><p><button class="button">JOIN</button></p></a>
 <!--
         <a href="https://api.whatsapp.com/send?phone=whatsappphonenumber&text=urlencodedtext"></a>
+        <a href="mailto:first@email.address,second@email.address,third@email.address">Contact Us</a> 
+
  -->
       
       </div>
