--- a/Papers/cn_paper.html
+++ b/Papers/cn_paper.html
@@ -40,7 +40,7 @@
                     </a>
                     <div class="caption">
                         <h3>Computer Network</h3>
-                        <p>The above Computer Networking paper is of IV Semester, C.T 2.
+                        <p>The above Computer Networking paper is of VI Semester, C.T 2.
                         Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     </a>
                     <div class="caption">
                         <h3>Computer Organization</h3>
-                        <p>The above Computer Organization paper is of IV Semester, C.T 2.
+                        <p>The above Computer Organization paper is of VI Semester, C.T 2.
                         Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     </a>
                     <div class="caption">
                         <h3>E-Commerce</h3>
-                        <p>The above E-Commerce paper is of IV Semester, C.T 2.
+                        <p>The above E-Commerce paper is of VI Semester, C.T 2.
                         Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                     </a>
                     <div class="caption">
                         <h3>Operating System</h3>
-                        <p>The above Operating System paper is of IV Semester, C.T 1.
+                        <p>The above Operating System paper is of VI Semester, C.T 1.
                         Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     </a>
                     <div class="caption">
                         <h3>Computer Networking</h3>
-                        <p>The above Computer Networking paper is of IV Semester, C.T 1.
+                        <p>The above Computer Networking paper is of VI Semester, C.T 1.
                         Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                     </a>
                     <div class="caption">
                         <h3>E-Commerce</h3>
-                        <p>The above E-Commerce paper is of IV Semester, C.T 1.
+                        <p>The above E-Commerce paper is of VI Semester, C.T 1.
                         Please contact if the paper is not clearly visible.</p>
                     </div>
                 </div>
