--- a/about_us.html
+++ b/about_us.html
@@ -114,13 +114,13 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="images/whatsapp.jpg" alt="Jane" style="width:100%">
+      <img src="images/gmail.jpg" alt="Jane" style="width:100%">
       <div class="container">
-        <h2>Whatsapp-Group</h2>
+        <h2>Gmail-Link</h2>
         <p class="title">Let's Support!</p>
-        <p>The JOIN button below would redirect you to our Whatsapp grp. Please join this group for our support to help us put new content if any. We are open to all suggestions.</p>
-        <p>Click The Link Below To Join The Group!</p>
-        <a href="mailto:Sanjeev.jadhav99@gmail.com,shubhamwaratkar99@gmail.com"><p><button class="button">JOIN</button></p></a>
+        <p>The JOIN button below would redirect you to our gmail-address. Please mail us for our support to help us put new content if any. We are open to all suggestions.</p>
+        <p>Click The Link Below To Mail Us!</p>
+        <a href="mailto:Sanjeev.jadhav99@gmail.com,shubhamwaratkar99@gmail.com"><p><button class="button">G-MAIL US</button></p></a>
 <!--
         <a href="https://api.whatsapp.com/send?phone=whatsappphonenumber&text=urlencodedtext"></a>
         <a href="mailto:first@email.address,second@email.address,third@email.address">Contact Us</a> 
