--- a/cn_tp/FDDI.html
+++ b/cn_tp/FDDI.html
@@ -122,7 +122,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="about_us.html">Contact Us</a>
                 </li>
                 <li>
                     <a href="../cn_syllabus.html">Syllabus</a>
