--- a/coming_soon.html
+++ b/coming_soon.html
@@ -57,17 +57,17 @@
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="https://twitter.com/hashtag/gcoea?lang=en">
+        <a href="">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="https://www.facebook.com/gcoeanews/">
+        <a href="">
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="https://www.instagram.com/explore/tags/gcoea/top/?hl=en">
+        <a href="">
           <i class="fab fa-instagram"></i>
         </a>
       </li>
