--- a/coming_soon_main.html
+++ b/coming_soon_main.html
@@ -43,7 +43,7 @@
             <div class="input-group input-group-newsletter">
               
               <div class="input-group-append">
-                <a href="cn.html" class="btn btn-secondary" type="button" >Click Here Please!</a>
+                <a href="It/index.html" class="btn btn-secondary" type="button" >Click Here Please!</a>
               </div>
 
             </div>
