--- a/cn_tp/ALOHA & SLOTTED ALOHA.html
+++ b/cn_tp/ALOHA & SLOTTED ALOHA.html
@@ -130,12 +130,12 @@
                 
             </ul>
 
-            <ul class="list-unstyled CTAs">
+        <ul class="list-unstyled CTAs">
                 <li>
-                    <a href="cn.pdf" class="download">Download Ref.Book</a>
+                    <a href="cn.html" class="download">Back to Home-Page</a>
                 </li>
                 <li>
-                    <a href="it.html" class="article">Back to selection</a>
+                    <a href="It/index.html" class="article">Back to selection</a>
                 </li>
             </ul>
         </nav>
